--- a/src/assets/styles/home.css
+++ b/src/assets/styles/home.css
@@ -3,6 +3,7 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
+  margin: 0 9rem;
 }
 
 .home__header {
@@ -30,12 +31,22 @@
   }
 }
 
+@media screen and (max-width: 768px) {
+  .home {
+    margin: 0 5rem;
+  }
+  .home__header {
+    font-size: 5rem;
+  }
+}
+
 @media screen and (max-width: 600px) {
   .home {
     align-items: center;
     text-align: center;
+    margin: 0 3rem;
   }
   .home__header {
-    font-size: 5rem;
+    font-size: 4rem;
   }
 }
