--- a/src/components/Layout/Footer.css
+++ b/src/components/Layout/Footer.css
@@ -4,6 +4,7 @@
   justify-content: space-between;
   flex-wrap: wrap;
   padding: 3rem 0;
+  margin: 0 8rem;
 }
 
 .footer__nav {
@@ -39,6 +40,12 @@
   }
   .footer__nav {
     margin-bottom: 2rem;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .footer {
+    margin: 0 3rem;
   }
 }
 
