--- a/src/components/Layout/Header.css
+++ b/src/components/Layout/Header.css
@@ -1,3 +1,6 @@
+.header {
+  margin: 0 8rem;
+}
 .nav {
   display: flex;
   align-items: center;
@@ -58,5 +61,11 @@
   }
   .nav__item > a:hover {
     border-bottom: none;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .header {
+    margin: 0 3rem;
   }
 }
