--- a/src/assets/styles/styles.css
+++ b/src/assets/styles/styles.css
@@ -118,6 +118,26 @@ p {
   display: none !important;
 }
 
+.page-not-found {
+  color: var(--color-primary);
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+  justify-content: center;
+  text-align: center;
+}
+
+.notfound__title {
+  font-size: 4rem;
+  color: inherit;
+}
+.notfound__link {
+  display: inline-block;
+  margin-top: 3rem;
+  color: inherit;
+  /* text-decoration: none; */
+}
+
 @media screen and (max-width: 768px) {
   .btn {
     font-size: 1.6rem;
